<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        tools:context=".EmpresaFragment">


        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_empresa"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/descripcion_foto"
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:src="@drawable/credi"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_quienessomos"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/img_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_quienessomos2"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_quienessomos3"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_quienessomos4"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv5T"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/titulo_m"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_m"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv5T"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv7T"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/titulo_v"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_v"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv7T"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv9T"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/titulo_v"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:padding="8dp"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_va"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv9T"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_va2"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv12T"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/titulo_o"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/tv11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contenido_objetivos"
            android:layout_margin="16dp"
            android:paddingBottom="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv12T"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

