<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EmpresaFragment">



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/titulo_contacto"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />





            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@color/casi_blanco_credimio"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/imgCorreo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/descripcion_correo"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_email"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/txtCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:autoLink="all"
                        android:textStyle="bold"
                        android:text="@string/correo"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.664"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/constrain1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">



                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    android:background="@color/casi_blanco_credimio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/descripcion_direccion"
                        android:src="@drawable/ic_house"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="24dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/direccion"
                        android:textSize="18sp" />

                </LinearLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/constrain2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="421dp"
                    android:layout_height="157dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/casi_blanco_credimio"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="24dp"
                        android:contentDescription="@string/descripcion_web"
                        android:src="@drawable/ic_baseline_web_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:gravity="center"
                        app:layout_constraintHorizontal_bias="0.664"
                        android:autoLink="all"
                        android:text="@string/pagina_web"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/constrain3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    android:background="@color/casi_blanco_credimio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/imgTel"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_phone"
                        android:contentDescription="@string/descripcion_telefono"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="24dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:autoLink="all"
                        android:text="@string/telefono"
                        android:textSize="18sp" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

